--- a/styles/main.css
+++ b/styles/main.css
@@ -2051,14 +2051,14 @@ p > code {
 .bg-color .bg-color {
       background: transparent !important;
     }body {
-      background-color: #495057;
+      background-color: #eee;
     }.header {
-        width: 1200px;
+        width: 960px;
         margin: 0 auto;
       }
 
       .main-continer {
-        width: 1200px;
+        width: 960px;
         margin: 0 auto;
       }
     body {
@@ -2071,7 +2071,7 @@ p > code {
       border-bottom-color: #555;
     }
     .archive-timeline-box::after, .tag-timeline-wrapper::after {
-      background: #eeeeeecc;
+      background: #eeeeeee5;
     }h1, h2, h3, h4, h5, h6 {
       color: #555;
     }
@@ -2117,11 +2117,11 @@ p > code {
       }.nav-item a:hover {
         color: #222;
       }.nav-item-active {
-      background: #f9f9f9cc;
+      background: #f9f9f9e5;
     }
 
     .nav-item:hover {
-      background: #f9f9f9cc;
+      background: #f9f9f9e5;
       color: rgba(0, 0, 0, 0.98);
     }.site-author-image {
       border-radius: 50%;
@@ -2156,10 +2156,8 @@ p > code {
     .active-hidden > a {
       color: #fc6423;
       border-bottom-color: #fc6423;
-    }.reward-btn-text {
-        background-color: #3bc9dbcc !important;
-      }.bg-color {
-      background-color: #ffffffcc;
+    }.bg-color {
+      background-color: #ffffffe5;
     }
     .gemini .blog-header, .gemini .sidebar-wrapper, .gemini .article-wrapper, .gemini .post, .gemini .page, .gemini .section, .gemini .section-box, .gemini .sidebar-box, .gemini .friends-section {
       border-radius: 5px;
@@ -2176,19 +2174,15 @@ p > code {
     .brand {
   
     }
-    
-      .brand {
-        font-weight: bold;
-        transform: scale(2);
-      }.main-title, .brand {
+    .main-title, .brand {
       color: #FFF !important;
     }
     .mist .site-title i {
-      background: #FFFFFFcc;
+      background: #FFFFFFe5;
     }.bg-img img {
-        filter: blur(5px)
-      }.box-shadow-wrapper {
-      padding: 10px;
+        filter: blur(3px)
+      }.box-scale > #landlord {
+      transform: scale(1);
     }body {
       cursor: default;
     }a {
