--- a/styles/main.css
+++ b/styles/main.css
@@ -274,7 +274,7 @@ p > code {
 .site-author-name {
   margin: 0;
   text-align: center;
-  color: #555;
+  color: ##ededed;
   font-weight: 600;
   font-size: 1em;
 }
@@ -2128,7 +2128,7 @@ p > code {
     }
     .site-author-image:hover {
       transform: rotate(666turn);
-      transition-delay: 1s;
+      /* transition-delay: 1s; */
       transition-property: all;
       transition-duration: 59s;
       transition-timing-function: cubic-bezier(.34,0,.84,1);
