--- a/media/css/gemini.css
+++ b/media/css/gemini.css
@@ -121,8 +121,8 @@
   margin: 0 auto;
   padding: 2px;
   height: auto;
-  background-color: #fff;
-  border: 1px solid #eee;
+  background-color: #1a42a23d;
+  border: 3px solid #00e7ff59;
 }
 
 .gemini .post-page {
