--- a/styles/main.css
+++ b/styles/main.css
@@ -274,7 +274,7 @@ p > code {
 .site-author-name {
   margin: 0;
   text-align: center;
-  color: ##ededed;
+  color: #555;
   font-weight: 600;
   font-size: 1em;
 }
@@ -2051,7 +2051,7 @@ p > code {
 .bg-color .bg-color {
       background: transparent !important;
     }body {
-      background-color: #eee;
+      background-color: #181d4b;
     }.header {
         width: 960px;
         margin: 0 auto;
@@ -2062,66 +2062,66 @@ p > code {
         margin: 0 auto;
       }
     body {
-      color: #f1f3f5;
+      color: #f8f9fa;
     }
     .next-md-body {
-      color: #f1f3f5;
+      color: #f8f9fa;
     }
     .next-md-body h1, .next-md-body h2 {
-      border-bottom-color: #f1f3f5;
+      border-bottom-color: #f8f9fa;
     }
     .archive-timeline-box::after, .tag-timeline-wrapper::after {
-      background: #e599f7e5;
+      background: #1c7ed6bf;
     }h1, h2, h3, h4, h5, h6 {
-      color: #eebefa;
+      color: #66d9e8;
     }
     
     .archive-timeline-title::before {
-      background-color: #eebefa;
+      background-color: #66d9e8;
     }
     
     .post-title-link::before {
-      background-color: #eebefa;
+      background-color: #66d9e8;
     }
     
     .node-title::before {
-      background-color: #eebefa;
+      background-color: #66d9e8;
     }a {
-      color: #66d9e8;
+      color: #fd7e14;
     }
     
     .next-md-body a, .friends-box a  {
-      color: #66d9e8;
+      color: #fd7e14;
     }a:hover {
-      color: #4c6ef5;
+      color: #f03e3e;
     }
     
     .archive-timeline-box .tag-node:hover::before {
-      background-color: #4c6ef5;
+      background-color: #f03e3e;
     }
     
     .markdownIt-TOC a:hover {
-      color: #4c6ef5;
-      border-bottom-color: #4c6ef5;
+      color: #f03e3e;
+      border-bottom-color: #f03e3e;
     }
 
     .next-md-body a:hover, .friends-box a:hover {
-      color: #4c6ef5;
-      border-bottom-color: #4c6ef5;
+      color: #f03e3e;
+      border-bottom-color: #f03e3e;
     }
     .nav-toggle .line {
       background-color:  !important;
     }
       .nav-item a {
-        color:  #74c0fc;
+        color:  #a5d8ff;
       }.nav-item a:hover {
-        color: #bac8ff;
+        color: #f3d9fa;
       }.nav-item-active {
-      background: #212529e5;
+      background: #1864abbf;
     }
 
     .nav-item:hover {
-      background: #212529e5;
+      background: #1864abbf;
       color: rgba(0, 0, 0, 0.98);
     }.site-author-image {
       border-radius: 50%;
@@ -2156,8 +2156,11 @@ p > code {
     .active-hidden > a {
       color: #fc6423;
       border-bottom-color: #fc6423;
-    }.bg-color {
-      background-color: #212529e5;
+    }.reward-btn-text {
+        background-color: #82c91ebf !important;
+      }.bg-color {
+      background-color: #02020dbf;
+	  border: 2px solid rgb(0 140 172 / 32%);
     }
     .gemini .blog-header, .gemini .sidebar-wrapper, .gemini .article-wrapper, .gemini .post, .gemini .page, .gemini .section, .gemini .section-box, .gemini .sidebar-box, .gemini .friends-section {
       border-radius: 5px;
@@ -2166,22 +2169,28 @@ p > code {
       border-radius: 5px;
     }
     .site-meta {
-      background: #495057 !important;
+      background: #1b4d74 !important;
     }
     .head-top-line {
-      background: #495057;
+      background: #1b4d74;
     }
     .brand {
   
     }
-    .main-title, .brand {
+    
+      .brand {
+        font-weight: bold;
+        transform: scale(1.5);
+      }.main-title, .brand {
       color: #66d9e8 !important;
     }
     .mist .site-title i {
-      background: #66d9e8e5;
+      background: #66d9e8bf;
     }.bg-img img {
-        filter: blur(3px)
-      }body {
+        filter: blur(0.5px)
+      }.box-shadow-wrapper {
+      padding: 10px;
+    }body {
       cursor: url('/media/curs/default_link.cur'), default;
     }a {
       cursor: url('/media/curs/default_normal.cur'), pointer !important;
