--- a/banniang/css/pio.css
+++ b/banniang/css/pio.css
@@ -92,7 +92,7 @@
 
 .pio-container .pio-dialog{
     top: -4em;
-	color: #007379;
+	color: #ff7f00;
     opacity: 0;
     z-index: -2;
     font-size: .8em;
