--- a/css/index.css
+++ b/css/index.css
@@ -5575,6 +5575,121 @@ blockquote.pullquote.right {
 .note.danger:not(.no-icon):not(.modern)::before {
   color: #d9534f;
 }
+div.timenode {
+  position: relative;
+}
+div.timenode:before {
+  top: 0;
+  height: 6px;
+}
+div.timenode:after {
+  top: 26px;
+  height: calc(100% - 26px);
+}
+div.timenode:last-child:after {
+  height: calc(100% - 26px - 16px);
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
+}
+div.timenode .meta {
+  position: relative;
+  color: var(--tab-botton-color);
+  font-size: 0.375rem;
+  line-height: 32px;
+  height: 32px;
+}
+div.timenode .meta:before {
+  background: rgba(59,159,255,0.5);
+  width: 16px;
+  height: 16px;
+  border-radius: 8px;
+}
+div.timenode .meta:after {
+  background: #44d7b6;
+  margin-left: 2px;
+  margin-top: 2px;
+  width: 12px;
+  height: 12px;
+  border-radius: 6px;
+  -webkit-transform: scale(0.5);
+  -moz-transform: scale(0.5);
+  -o-transform: scale(0.5);
+  -ms-transform: scale(0.5);
+  transform: scale(0.5);
+}
+div.timenode .meta p {
+  font-weight: bold !important;
+  margin: 0 0 0 24px !important;
+}
+div.timenode .body {
+  margin: 4px 0 10px 24px;
+  padding: 10px;
+  border-radius: 12px;
+  background: #efeded;
+  display: inline-block;
+}
+div.timenode .body p:first-child {
+  margin-top: 0 !important;
+}
+div.timenode .body p:last-child {
+  margin-bottom: 0 !important;
+}
+div.timenode .body .highlight {
+  background: #fff7ea;
+  filter: grayscale(0%);
+}
+div.timenode .body .highlight figcaption {
+  background: #ffeed2;
+}
+div.timenode .body .highlight .gutter {
+  background: #ffedd0;
+}
+div.timenode:hover .meta {
+  color: #444;
+}
+div.timenode:hover .meta:before {
+  background: rgba(255,87,34,0.5);
+}
+div.timenode:hover .meta:after {
+  background: #ff5722;
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -o-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+}
+div.timenode:before,
+div.timenode:after {
+  content: "";
+  z-index: 1;
+  position: absolute;
+  background: rgba(59,159,255,0.5);
+  width: 2px;
+  left: 7px;
+}
+div.timenode .meta,
+div.timenode .body {
+  max-width: calc(100% - 24px);
+}
+div.timenode .meta:before,
+div.timenode .meta:after {
+  content: "";
+  position: absolute;
+  top: 8px;
+  z-index: 2;
+}
+[data-theme="dark"] div.timenode .body {
+  background: #2c2c2c;
+}
+[data-theme="dark"] div.timenode:hover .meta {
+  color: #ccd0d7;
+}
+[data-theme="dark"] div.timenode .meta {
+  color: rgba(255,255,255,0.6);
+}
+[data-theme="dark"] div.timeline p.p.h2 {
+  color: rgba(255,255,255,0.6);
+}
 #article-container .tabs {
   position: relative;
   margin: 0 0 20px;
