--- a/css/index.css
+++ b/css/index.css
@@ -1403,7 +1403,7 @@ input::placeholder {
   z-index: -999;
   width: 100%;
   height: 100%;
-  background: url(https://blog.4t.pw/media/images/custom-bgImg.jpg);
+  background: url(/img/bj.jpg);
   background-attachment: local;
   background-position: center;
   background-size: cover;
