--- a/css/notice.css
+++ b/css/notice.css
@@ -6,14 +6,15 @@
   font-size: 1.45em
 }
 #notice {
-  height: 47px;
-  background-color: rgba(0, 0, 0, 0.110);
-  color: var(--font-color);
-  padding: 10px 20px 10px 20px;
-  border-radius: 10px;
-  cursor: pointer;
-  display: flex;
-  overflow: hidden;
+    height: 47px;
+    background-color: rgb(0 199 255 / 59%);
+    border: 2px solid rgb(0 217 255);
+    color: #ffffff;
+    padding: 10px 20px 10px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    display: flex;
+    overflow: hidden;
 
 }
 [data-theme="dark"] #notice {
