--- a/css/notice.css
+++ b/css/notice.css
@@ -5,17 +5,22 @@
   color: #ff0000;
   font-size: 1.45em
 }
+.ggwz {
+  width: 85%;
+  height: 100%;
+  line-height: 25px;
+}
+
 #notice {
-  height: 47px;
-  background-color: rgb(0 255 248 / 70%);
-  border: 2px solid rgb(0 130 182);
-  color: var(--font-color);
-  margin-top: 20px;
-  padding: 10px 20px 10px 20px;
-  border-radius: 10px;
-  cursor: pointer;
-  display: flex;
-  overflow: hidden;
+    height: 400px;
+    background-color: rgb(0 199 255 / 59%);
+    border: 2px solid rgb(0 217 255);
+    color: #ffffff;
+    padding: 10px 20px 10px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    display: flex;
+    overflow: hidden;
 
 }
 [data-theme="dark"] #notice {
@@ -25,24 +30,9 @@
   white-space: nowrap;
   font-weight: bolder;
 }
-.swiper-wrapper {
-  width: 100%;
-  height: 100%;
-  line-height: 25px;
-}
-.swiper-wrapper .swiper-slide {
-  width: 100%;
-  text-align: center;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  transition: 0.3s;
-  font-weight: bold;
-}
-.swiper-slide:hover {
-  color: #64b2ff;
-}
+
+
+
 #noticeList {
   margin-left: auto;
   margin-right: auto;
@@ -57,3 +47,4 @@
   margin-left: 8px;
   transition: 0.3s;
 }
+
