--- a/css/mycss.css
+++ b/css/mycss.css
@@ -33,6 +33,8 @@
   #card-newest-comments,
   .card-categories,
   .card-tags,
+  .aside-content,
+  .card-webinfo,
   .container.recent-post-item,
   .card-archives,
   .ggl,
