--- a/css/notice.css
+++ b/css/notice.css
@@ -1146,7 +1146,7 @@ strong {
 
 
 /* 文章中的超链接 */
-#article-container a {
+#post a {
   text-decoration: none;
   border-bottom: 2px solid var(--heo-lighttext);
   color: var(--heo-fontcolor);
@@ -1154,47 +1154,11 @@ strong {
   border-radius: 4px 4px 0 0;
 }
 
-#article-container a:not(.fancybox):hover {
+#post a:not(.fancybox):hover {
   text-decoration: none;
   border-bottom: 2px solid var(--heo-none);
   color: var(--heo-white);
   background: var(--heo-main);
   border-radius: 4px;
   box-shadow: var(--heo-shadow-main);
-}
-
-#article-container a.fancybox {
-  border-bottom: 0;
-  padding: 0;
-  margin: auto;
-  display: contents;
-  width: fit-content;
-}
-
-#article-container a.fancybox img {
-  cursor: pointer;
-}
-
-.site-card-avatar a.fancybox {
-  padding: 0 !important;
-}
-
-#article-container p {
-  margin: 1rem 0;
-  text-align: left;
-  letter-spacing: 0.6px;
-}
-
-#article-container code {
-  color: var(--heo-white);
-  padding: 0.2rem 0.4rem;
-  border-radius: 4px;
-  margin: 0px 4px;
-  background: var(--heo-pink);
-  line-height: 2;
-  box-shadow: var(--heo-shadow-border);
-}
-
-#article-container code::selection {
-  background: var(--heo-main) !important;
 }
